crates/buff-lang-codegen-rust/tests/snapshots/process_codegen__os_codegen_arch_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/process_codegen.rs
expression: src
---
fn f() {
    std::env::consts::ARCH.to_string();
}
