crates/buff-lang-codegen-rust/tests/snapshots/process_codegen__os_codegen_cpus_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/process_codegen.rs
expression: src
---
fn f() {
    num_cpus::get() as i64;
}
