crates/buff-lang-codegen-rust/tests/snapshots/process_codegen__os_codegen_hostname_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/process_codegen.rs
expression: src
---
fn f() {
    std::env::var("COMPUTERNAME")
        .or_else(|_| std::env::var("HOSTNAME"))
        .unwrap_or_default();
}
