crates/buff-lang-codegen-rust/tests/snapshots/process_codegen__process_codegen_exit_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/process_codegen.rs
expression: src
---
fn f() {
    std::process::exit(42 as i32);
}
