crates/buff-lang-codegen-rust/tests/snapshots/process_codegen__process_codegen_spawn_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/process_codegen.rs
assertion_line: 703
expression: src
---
fn f() {
    std::process::Command::new("ls".to_string()).args(vec![]).spawn().ok();
}
